# SC4064-Projects

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.py  pyproject.toml  wrangler.toml
.github/workflows/: lint.yml
docs/: design.typ  multi_gpu_guide.md
proposal/: README.md  proposal.md  proposal.tex  references.bib
report/: references.bib  report.typ
results/: benchmark_results.json
scripts/: install_nccl.fish  plot_analysis.py  plot_results.py  run_all.sh  run_and_collect.py  run_benchmarks.sh  run_transports.sh
slides/: index.html  talk_script.fdb_latexmk  talk_script.fls  talk_script.tex
src/: nccl.h
src/benchmark/: bench_multi_gpu.cu  bench_multi_node.cu  bench_single_gpu.cu
src/kernels/: 01_naive.cu  02_coalesced.cu  03_smem_tiling.cu  04_1d_blocktile.cu  05_2d_blocktile.cu  06_vectorized.cu  07_warptile.cu  blocktile_1d.cu  blocktile_2d.cu  coalesced.cu  cublas.cu  cublas_ref.cu  gemm_dispatch.cuh  gemm_kernel.cuh  kernel_registry.cuh  kernels.cuh  naive.cu  smem_tiling.cu  vectorized.cu  warptile.cu
src/tensor_parallel/: nccl_compat.cu  tensor_parallel.cu  tensor_parallel.cuh
src/utils/: cuda_raii.cuh  cuda_utils.cuh  device_matrix.cuh  nccl_utils.cuh
